header added ( not responsive or not working ) and some bug fixed in theme mode

--- a/src/scss/loder.scss
+++ b/src/scss/loder.scss
@@ -11,7 +11,7 @@
   display: grid;
   place-content: center;
 
-  z-index: 9999 !important;
+  z-index: 99999 !important;
   background-color: var(--bg-main);
 
   span {
